added new keyblades + listpatches

--- a/sys.yml
+++ b/sys.yml
@@ -646,3 +646,41 @@
   fr: Ventus
   gr: Ventus
   it: Ventus
+- id: 0x3D63
+  en: The Gazing Eye
+  sp: The Gazing Eye
+  fr: The Gazing Eye
+  gr: The Gazing Eye
+  it: The Gazing Eye
+- id: 0x05CB
+  en: A Keyblade forged from the eye of the
+
+      Master of Masters. 
+  sp: A Keyblade forged from the eye of the
+
+      Master of Masters. 
+  fr: A Keyblade forged from the eye of the
+
+      Master of Masters. 
+  gr: A Keyblade forged from the eye of the
+
+      Master of Masters. 
+  it: A Keyblade forged from the eye of the
+
+      Master of Masters. 
+- id: 0x05C8
+  en: X-Blade
+  sp: X-Blade
+  fr: X-Blade
+  gr: X-Klinge
+  it: X-Blade
+- id: 0x05C9
+  en: The most powerful of Keyblades.
+  sp: La llave más poderosa de todas.
+  fr: Keyblade qui améliore toutes vos statistques
+      
+      et permet d'asséner des coups critiques
+      
+      dévastateurs plus facilement.
+  gr: Vereint alle denkbaren Kräfte.
+  it: Permette di equipaggiarti con un Keyblade.
