--- a/sys.yml
+++ b/sys.yml
@@ -2168,3 +2168,15 @@
   fr: Earth Eruption
   gr: Erdausbruch
   it: Earth Eruption
+- id: 0x4539
+  en: Ventus´s Journal
+  sp: Diario de Ventus
+  fr: Carnet Ventus
+  gr: V{:width 95}entus {:width 100}T{:width 95}agebuch
+  it: Diario di Ventus
+- id: 0x453A
+  en: Read Ventus´s Journal.
+  sp: Muestra las notas de Ventus.
+  fr: Consulte les notes prises par Ventus.
+  gr: Ventus Tagebuch lesen.
+  it: Leggi il diario di Ventus.
